fixed gap between boxes

--- a/Latitude/LatVSWind/style.css
+++ b/Latitude/LatVSWind/style.css
@@ -5,7 +5,7 @@
 
 #visBox{
     background-color:white;
-    padding-bottom:100px;
+    padding-bottom:80px;
 }
 
 #copyright{
